# HydraulicNetwork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cycles.data  inci_reduced.csv  main.cpp  network1.csv  nw.csv  parsecsv.cpp  read_data.h
.github/workflows/: cmake.yml
HydraulicNetLib/: CMakeLists.txt
HydraulicNetLib/include/: Data.h  NetworkSolve.h  Timer.h  eigenData.h  graph.h  inci.h  newton.h  util.h
HydraulicNetLib/src/: NetSolve.cpp  NetworkSolve.cpp  inci.cpp  inci_test.cpp  main.cpp  newton.cpp
data/: Pipes_information.csv  Zero_Loop.csv  verona.csv
data/outputs/: head.csv  jacobian.csv  resistance.csv
inputs/: Demand_loads.csv  Demand_loads_Liu.csv  Heating_demand_Liu.csv  Loops.csv  Network_information.csv  Pipes_info.csv  Pipes_information.csv  network1.csv  nw43.csv
inputs/old/: Heating_demand.csv  Network_info.csv
outputs/: Majid's_Results.csv  NeMo_Results.csv  diameters.csv  error.csv  flowQ.csv  flowQ_test.csv  force.csv  inci.csv  inci_tran.csv  inci_tran_reduced.csv  jacobian.csv  mass_flow.csv  mflow.csv  mflowLiu.csv  mflowLiu_1606.csv  mflowLiu_new  mflow_verona.csv  resistance.csv  reynold.csv
